migration/gemini_migrate/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemini
spec:
  selector:
    matchLabels:
      app: gemini
  template:
    metadata:
      labels:
        app: gemini
    spec:
      containers:
      - name: gemini
        image: 086351999451.dkr.ecr.ap-south-1.amazonaws.com/gemini:1.0
        resources: {}
        ports:
        - containerPort: 7777
        livenessProbe:
          httpGet:
            path: /v0.1/health
            port: 7777
          timeoutSeconds: 10
          periodSeconds: 4
          failureThreshold: 10
          initialDelaySeconds: 25
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /v0.1/health
            port: 7777
          timeoutSeconds: 10
          periodSeconds: 2
          failureThreshold: 10
          initialDelaySeconds: 15
          successThreshold: 1
