migration/gemini_migrate/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gemini
spec:
  selector:
    app: gemini
  ports:
  - name: traffic
    port: 7777
    targetPort: 7777
    protocol: TCP
  - name: communication
    port: 2552
    targetPort: 2552
    protocol: TCP
  type: ClusterIP
