migration/gemini_migrate/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gemini
spec:
  ingressClassName: nginx
  rules:
  - host: gemini.s9.devopscloud.link
    http:
      paths:
      - backend:
          service:
            name: gemini
            port:
              number: 7777
        path: /
        pathType: Prefix
